<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText_stalling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="1"
        android:nextFocusLeft="@id/editText_rij"
        android:nextFocusRight="@id/editText_rij"
        android:nextFocusUp="@id/editText_rij"
        android:nextFocusDown="@id/editText_rij"
        android:nextFocusForward="@id/editText_rij"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/editText_rij"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_stalling" />

    <EditText
        android:id="@+id/editText_rij"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="2"
        android:nextFocusLeft="@id/editText_nummer"
        android:nextFocusRight="@id/editText_nummer"
        android:nextFocusUp="@id/editText_nummer"
        android:nextFocusDown="@id/editText_nummer"
        android:nextFocusForward="@id/editText_nummer"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/editText_nummer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText_stalling"
        app:layout_constraintTop_toBottomOf="@+id/textView_rij" />

    <EditText
        android:id="@+id/editText_nummer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="3"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText_rij"
        app:layout_constraintTop_toBottomOf="@+id/textView_nummer" />

    <TextView
        android:id="@+id/textView_stalling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textView_stalling"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView_rij"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_rij"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textView_rij"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView_nummer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_stalling"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_nummer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/textView_nummer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_rij"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple"
        android:focusable="true"
        android:text="@string/button_set"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_rij" />

    <ListView
        android:id="@+id/not_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center_horizontal|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>
